test: 🚨 测试 build 打包发布

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@reverse-situation/react-components",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "prepare": "husky install",
+    "build": "tsc && vite build",
     "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -20,10 +22,10 @@
   "description": "",
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "react-router-dom": "^6.25.1",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/react": "^18.3.3",
