--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,11 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "declaration": true,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -27,5 +32,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["test/src"]
+  "include": ["src"],
 }
